Prevent wrapping in new badge

--- a/static/css/pages/premium.css
+++ b/static/css/pages/premium.css
@@ -728,6 +728,7 @@ html {
   font-weight: 700;
   background: #0797E1;
   color: #fff;
+  white-space: nowrap;
 }
 
 @media (min-width: 992px) {
